--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,17 @@
     z-index: 0  ;
 }
 
+.message_container {
+    display: flex;
+    alignItems: center;
+    z-index: 100;
+}
 
 /* start toolbar styles */
 .toolbar {
     position: sticky;
     top: 0;
+    z-index: 101;
     width: 100%;
     height: 100px;
     background-color: #ffffff;
@@ -42,6 +48,7 @@
     align-items: center;
     margin-bottom: 30px;
 }
+
 .toolbarIcon-container {
     display: flex;
     flex-wrap: nowrap;
@@ -249,6 +256,10 @@ form {
     font-size: 16px;
     color: #525252;
     margin: 0 5px;
+}
+
+.btn:hover {
+    border-bottom: 2px solid #4b4b4b;
 }
 
 .formSubmit_btn {
