--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 .toolbar {
     position: sticky;
     top: 0;
-    z-index: 101;
+    z-index: 200;
     width: 100%;
     height: 100px;
     background-color: #ffffff;
@@ -79,7 +79,7 @@
     height: 30px;
     width: 100%;
     max-width: 300px;
-    margin-left: 10px;
+    /*margin-left: 10px;*/
 }
 
 .search_input {
