--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
     z-index: 0  ;
 }
 
+.d-none {
+    display: none;
+}
+
 .message_container {
     display: flex;
     alignItems: center;
@@ -47,6 +51,14 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+}
+
+.toolbar_title {
+    font-size: 25px;
+    color: #a1a1a1;
+    margin: 0 10px;
+    width: 30%;
+    text-align: center;
 }
 
 .toolbarIcon-container {
@@ -71,6 +83,10 @@
     margin: 0 15px;
 }
 
+.searchBox_container {
+    width: 30%;
+}
+
 .toolbar-search {
     display: flex;
     align-items: center;
@@ -80,6 +96,10 @@
     width: 100%;
     max-width: 300px;
     /*margin-left: 10px;*/
+}
+.searchBox {
+    width: 90%;
+    margin: 0 10px;
 }
 
 .search_input {
@@ -92,10 +112,31 @@
     outline: none;
     opacity: 1;
 }
+
+.red_heart {
+    color: #FF0000FF;
+    cursor: pointer;
+}
+
+.gray_heart {
+    color: #a1a1a1;
+    cursor: pointer;
+}
+
+.icon_margin {
+    margin: 0 6px;
+}
 /* end toolbar styles */
 
 
 /* start contact list styles */
+.contactList_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .contactList {
     width: 100%;
     z-index: 100;
@@ -138,6 +179,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    cursor: pointer;
 }
 
 .contactItem_favourite {
@@ -169,6 +211,37 @@
 .detail_icon {
     cursor: pointer;
 }
+
+.max_height {
+    height: 100%;
+}
+
+.min_height {
+    height: 1px;
+}
+
+.black_color {
+    color: #000;
+}
+
+.detail_line {
+    border: 1px solid #D8D8D8;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.contact_row_number {
+    font-size: 12px;
+    color: #8c8c8c;
+    margin-top: 8px;
+}
+
+.message_text_container {
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+}
+
 /* end contact list styles */
 
 
